--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -10,8 +10,8 @@
 		<style type="text/css"></style>
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"/>
-		<script type="module" crossorigin src="{{ asset('./assets/admin-bundle.js') }}"></script>
-		<link rel="stylesheet" crossorigin href="{{ asset('./assets/admin-bundle.css') }}">
+		<script type="module" crossorigin src="{{ asset('./build/admin-bundle.js') }}"></script>
+		<link rel="stylesheet" crossorigin href="{{ asset('./build/admin-bundle.css') }}">
 	</head>
 	<body class="antialiased flex h-full text-base text-gray-700" 
         style="overflow:visible !important; margin-right:0 !important; position:static !important;">
